<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.AboutUsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        android:theme="@style/RoundedDialog">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:theme="@style/Widget.AppCompat.PopupMenu">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="Efficient, Effective, and Sustainable Sourcing"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:background="@color/red"
            android:layout_marginRight="150dp"
            android:layout_marginLeft="150dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/line_1"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
               android:textColor="@color/black"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/about"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:background="@color/red"
                android:layout_width="3dp"
                android:layout_height="match_parent"/>

            <TextView
                android:textColor="@color/black"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/about1"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@color/red"
                android:layout_width="3dp"
                android:layout_height="match_parent"/>

            <TextView
                android:textColor="@color/black"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/about2"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about3"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/black"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about4"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_marginRight="150dp"
            android:layout_marginLeft="150dp"
            android:background="@color/red"
            android:layout_width="match_parent"
            android:layout_height="3dp"/>

        <TextView
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about5"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textColor="@color/black"
            android:background="@drawable/red_button"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about6"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about7"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:background="@drawable/red_button"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about8"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about9"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:background="@drawable/red_button"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about10"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about11"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@color/black"
            android:background="@drawable/red_button"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about12"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/about13"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/floating_button_layout"
        android:id="@+id/supportChat">
    </include>



</RelativeLayout>