<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/filter_layout"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:background="@color/view_line"
            android:padding="15dp"
            android:textStyle="bold"
            android:text="@string/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/close_main"
            android:layout_margin="10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>




    <RadioGroup
        android:id="@+id/no_order_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/stra_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/all">

        </RadioButton>

        <RadioButton
            android:id="@+id/stra_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/tick"
           >

        </RadioButton>

        <RadioButton
            android:id="@+id/stra_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/un_tick">

        </RadioButton>

    </RadioGroup>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/date1"
            android:paddingRight="3dp"
            android:drawableRight="@drawable/ic_calendar"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:hint="@string/date_from"
            android:layout_margin="4dp"
            android:background="@drawable/out_line"
            android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

        <EditText
            android:id="@+id/date2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/out_line"
            android:drawableRight="@drawable/ic_calendar"
            android:hint="@string/date_to"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="3dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:background="@drawable/filter_button_two"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@color/white" />

        <TextView
            android:gravity="center"
            android:background="@drawable/filter_button_bg"
            android:textColor="@color/white"
            android:text="@string/filter"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

    </LinearLayout>

</LinearLayout>