<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.OTPActivity">

    <RelativeLayout
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:padding="20dp"
            android:src="@drawable/ssslogopng" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="230dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/white_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/otp_line"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/otp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/number_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="0"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/mobile_number"
                android:textColor="@color/black" />
        </LinearLayout>


        <com.poovam.pinedittextfield.SquarePinField
            android:id="@+id/enter_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/line"
            android:inputType="number"
            app:noOfFields="4" />

        <ImageView
            android:id="@+id/next_page"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:background="@drawable/red_circle"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_arrow"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="205dp"
        android:background="@drawable/red_button"
        android:padding="10dp"
        android:text="Resend OTP"
        android:textColor="@color/white" />

</RelativeLayout>